# docs-en

./: LICENSE  README.md  config.ini  get_started.md  index.md  pyproject.toml
_build/eval/: README.ipynb  get_started.ipynb  index.ipynb
_build/html/: .buildinfo  README.html  genindex.html  get_started.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  environment.pickle  get_started.doctree  index.doctree
_build/html/_sources/: README.rst.txt  index.rst.txt
_build/ipynb/: README.ipynb  get_started.ipynb  index.ipynb
_build/linkcheck/: output.json  output.txt
_build/linkcheck/.doctrees/: environment.pickle  get_started.doctree  index.doctree
_build/pdf/: d2lbook.fdb_latexmk  d2lbook.fls  d2lbook.tex  d2lbook.toc  mybook.aux  mybook.fdb_latexmk  mybook.fls  mybook.out  mybook.tex
_build/pdf/.doctrees/: README.doctree  environment.pickle  get_started.doctree  index.doctree
_build/rst/: README.rst  conf.py  get_started.rst  index.rst
