[project]
name = "mybook"
version = "0.1.0"
description = ""
authors = [
    {name = "Hamza Qureshi",email = "hamza7771.861@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pybtex (==0.24)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
